// common proto
syntax = "proto3";

package lbtproto;

option cc_generic_services = true;
option py_generic_services = true;

message Void { }

message ServiceInfo {
	string addr = 1;
	string type = 2;
	bytes entityid = 3;
}

message GateInfo {
	string addr = 1;
}

message ServiceRequest {
	string addr = 1;	// src addr
	bytes reqid = 2;	// for requester callback
	string type = 3;
	string method = 4;
	bytes params = 5;
	int32 routet = 6;	// route type
	bytes routep = 7;	// route param
	int32 hval = 8;	// hash value for hashed method
}

message ServiceReply {
	string addr = 1;	// src addr
	bytes reqid = 2;	// for requester callback
	bytes reply = 3;
}

/*
message MailBox {
	string addr = 1;
	bytes id = 2;
}
*/

message EntityData {
	string addr = 1;
	bytes id = 2;
	string type = 3;
	bytes data = 4;
}

message EntityMsg {
	string addr = 1;	// target entity addr
	bytes id = 2;	// target entity id
	string method = 3;
	bytes params = 4;
	int32 hval = 5;	// hash value for hashed entity method
}

/*
message ClientEntityMsg {	// service-gate-client entity msg
	string addr = 1;	// target entity addr
	bytes id = 2;	// target entity id
	string method = 3;
	bytes params = 4;
}
*/

message Heartbeat {
	int64 t = 1;
}

